Se creó con Colab

--- a/Practica1_INT_ART.ipynb
+++ b/Practica1_INT_ART.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1F9knuaTau72Vy_A7rjbXyXexWPF2eFaS",
-      "authorship_tag": "ABX9TyP6suH6K19jYQ9xqr7q4geb",
+      "authorship_tag": "ABX9TyNaLM9chdzxdQFBmDzKrD4N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,298 +47,15 @@
     {
       "cell_type": "code",
       "source": [
-        "!git config --global user.email \"francisco.garzagrd@uanl.edu.mx\"\n",
-        "!git config --global user.name \"Yastek-Garza\""
-      ],
-      "metadata": {
-        "id": "gTN5sWagvs_Z"
-      },
-      "execution_count": 175,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git init"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "wZZi4YoXxumJ",
-        "outputId": "003981dd-ba32-4262-e05d-c78ffc122599"
-      },
-      "execution_count": 176,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Reinitialized existing Git repository in /content/ruta/a/tu/repositorio/local/.git/\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git branch -m Actividad-5_DatSen"
-      ],
-      "metadata": {
-        "id": "yJygGhDlCSEl"
-      },
-      "execution_count": 177,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
-        "\n",
-        "# aqui montamos a google drive lo cual significa que ya existe una conexion\n",
-        "#entre google colab y nuestro google drive permitiéndote acceder\n",
-        "#a los archivos de tu Drive como si estuvieran en tu computadora local."
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ZTCcBuGkDVLF",
-        "outputId": "1e8c207b-826e-461b-df18-ca5e1bba36fc"
-      },
-      "execution_count": 178,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import os\n",
-        "import shutil\n",
-        "\n",
-        "# Ruta del archivo en Google Drive\n",
-        "origen = \"/content/drive/MyDrive/Colab Notebooks/Practica1_INT_ART.ipynb\"\n",
-        "\n",
-        "# Ruta del archivo en tu repositorio local\n",
-        "destino = \"/content/Actividad-5_DatSen/Practica1_INT_ART.ipynb\"\n",
-        "\n",
-        "# Crea el directorio de destino si no existe\n",
-        "os.makedirs(os.path.dirname(destino), exist_ok=True)\n",
-        "\n",
-        "# Copia el archivo\n",
-        "shutil.copy(origen, destino)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "lwa9NsJcZdX6",
-        "outputId": "ce7ed3b0-982d-4732-fc11-9f23042addf0"
-      },
-      "execution_count": 179,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'/content/Actividad-5_DatSen/Practica1_INT_ART.ipynb'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 179
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git add Practica1_INT_ART.ipynb\n",
-        "#Esta es el area de preparaciondel archivo que subira a git hub"
-      ],
-      "metadata": {
-        "id": "lJmZeRX1ZCny"
-      },
-      "execution_count": 180,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git commit -m \"Agrega Practica1_INT_ART.ipynb desde Google Drive\"\n",
-        "#aqui se hace una confirmacion de el archivo a subir y se indica que mande un mensaje en caso de que alla exito"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "_jboYb6pZCbb",
-        "outputId": "56663fb4-4f09-430c-9c9a-f06d3f24ab83"
-      },
-      "execution_count": 181,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "On branch Actividad-5_DatSen\n",
-            "nothing to commit, working tree clean\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git log --oneline"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "MMOjdBHogGs1",
-        "outputId": "97ee2aa9-245b-4f0f-ac25-bbdad7bb72c8"
-      },
-      "execution_count": 157,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[33m80a7dbf\u001b[m\u001b[33m (\u001b[m\u001b[1;36mHEAD -> \u001b[m\u001b[1;32mActividad-5_DatSen\u001b[m\u001b[33m)\u001b[m Agrega Practica1_INT_ART.ipynb desde Google Drive\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git add Practica1_INT_ART.ipynb"
-      ],
-      "metadata": {
-        "id": "THhbIXaZgpfa"
-      },
-      "execution_count": 173,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git commit -m \"Agrega Practica1_INT_ART.ipynb desde Google Drive\""
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "16j3IY4JZCQa",
-        "outputId": "123ffc89-0c3c-4819-ccc1-a5c190be1a9c"
-      },
-      "execution_count": 174,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "On branch Actividad-5_DatSen\n",
-            "nothing to commit, working tree clean\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git remote -v"
-      ],
-      "metadata": {
-        "id": "ooDxzM-ljBl7"
-      },
-      "execution_count": 160,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git remote add origin https://github.com/Yastek-Garza"
-      ],
-      "metadata": {
-        "id": "fU57Oe-LjL-M"
-      },
-      "execution_count": 161,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git branch"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "FV0iHlWRjp8w",
-        "outputId": "ce1ce1c6-e9d8-44ee-ab20-5d3593994a50"
-      },
-      "execution_count": 163,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "* \u001b[32mActividad-5_DatSen\u001b[m\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git rm --cached -r .\n",
-        "!git add .\n",
-        "!git commit -m \"Limpiar caché\""
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "bX156yJdkNEF",
-        "outputId": "c2ccf3cb-f29c-406f-abcb-a80aec3cd5c6"
-      },
-      "execution_count": 165,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "rm 'Practica1_INT_ART.ipynb'\n",
-            "On branch Actividad-5_DatSen\n",
-            "nothing to commit, working tree clean\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "#aqui estamos importando las librerías que usaremos en este archivo de colab"
       ],
       "metadata": {
-        "id": "FwM-rwaXMH7u"
+        "id": "-KQ2nzZ5lxRh"
       },
-      "execution_count": 3,
+      "execution_count": 183,
       "outputs": []
     },
     {
